--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,7 +15,7 @@ body{
 
 .mainnav {
   display:flex;
-  width:70%;
+  width:80%;
   height:100px;
   border: 10px solid red;
   border-right: none;
@@ -33,6 +33,7 @@ body{
 
 .headings a{
   text-decoration: none;
+  margin-right:10px;
   color:black;
 }
 
@@ -54,4 +55,33 @@ body{
   text-align: center;
   color: #4A4A4A;
 
+}
+.picturemaster{
+display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.picturecontainer{
+  width: 80%;
+  display: flex;
+}
+.leftcol{
+  display: flex;
+  flex:2;
+  flex-wrap: wrap;
+}
+.leftT{
+  flex:2;
+}
+.leftBL{
+  flex:1;
+}
+.leftBR{
+  flex:1:
+}
+.rightcol{
+  display: flex;
+  flex:1;
+  flex-wrap: wrap;
 }
