--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,10 @@
 * {
-  border:1pt solid red;
+  /*border:1pt solid transparent;*/
+  font-family: helvetica;
 }
-body{
-  /*display:flex;*/
+img {
+  width: 100%;
+  max-width: 100%;
 }
 .navbar {
   display:flex;
@@ -27,19 +29,47 @@ body{
   width:100%;
   display:flex;
   align-items: center;
-  justify-content: flex-start;
 
 }
 
 .headings a{
   text-decoration: none;
-  margin-right:10px;
+  margin-right:30px;
   color:black;
 }
 
 .headings img{
+  margin-right:30px;
+}
 
-  height:10px;
+#logo {
+  display:block;
+  width: 100px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+#search {
+  width:20px;
+  float:right;
+}
+.col {
+  display: inline-block;
+  /*float: left;*/
+}
+
+.col-left {
+  width: 20%;
+  /*display: flex;*/
+  /*justify-content:center;*/
+
+}
+.col-middle {
+  width:50%;
+}
+.col-right {
+  width: 30%;
+  float:right;
 }
 
 .mottocontainer{
@@ -49,12 +79,18 @@ body{
 }
 
 .motto{
-  display:flex;
-  width:40%;
-  flex-direction: column;
+  display:block;
   text-align: center;
+  width:35%;
   color: #4A4A4A;
 
+}
+.motto p{
+  margin-top:0;
+  font-size:16px;
+}
+.motto h1{
+  margin-bottom: 0;
 }
 .picturemaster{
 display: flex;
@@ -71,20 +107,31 @@ display: flex;
   flex:2;
   flex-wrap: wrap;
   justify-content: center;
+  margin-right:5px;
 }
 .leftT{
   flex:2;
+  min-width: 100%;
+  margin-bottom:3px;
 }
 .leftBL{
-  flex:1;
+  flex:0.81;
+  margin-right:7px;
 }
 .leftBR{
-  flex:1:
+  flex:1.2;
 }
 .rightcol{
   display: flex;
-  flex:1;
+  flex:1.02;
   flex-wrap: wrap;
+}
+.rightT{
+  min-width: 100%;
+}
+
+.rightB{
+  min-width: 100%;
 }
 
 .footermaster{
@@ -94,8 +141,11 @@ display: flex;
 
 }
 .footercontainer{
+  color: #4A4A4A;
   width:80%;
   display:flex;
+  font-size:10pt;
+
 
 }
 .footer1{
@@ -105,10 +155,15 @@ display: flex;
 .footer1 h2{
   color:red;
 }
+
+.footer1 a{
+  color: #4A4A4A;
+}
 .footer2{
   flex:3;
 }
 
 .footer2 p{
   column-count: 3;
+  font-size:10pt;
 }
